# fossil_scribe

./: .gitignore  Dockerfile  Makefile  README.md
backend/: app.py  pyproject.toml
backend/fossil_scribe/: action_handler.py  endpoints.py  gov.py  models.py
backend/fossil_scribe/action_config/: national_trust_barclays.yaml  santa_toys.yaml  santa_workshop.yaml
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: Card.vue  Cause.vue  CauseCard.vue  ConcernCard.vue  EmailCard.vue  RepresentativeCard.vue  Scribe.vue  stepper.vue
